# Laplacian-Mesh

./: .gitignore  Seminar.ipynb  pyproject.toml  tr_reg_000.ply  tr_reg_005.ply
