[project]
name = "seminar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipyvtklink>=0.2.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "nibabel>=5.3.2",
    "nilearn>=0.11.1",
    "numpy>=2.3.0",
    "panel>=1.7.1",
    "plotly>=6.1.2",
    "pyglet>=2.1.6",
    "pyvista[jupyter]>=0.45.2",
    "scipy>=1.15.3",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "trimesh>=4.6.11",
]
